<?xml version="1.0" encoding="utf-8"?>
    <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/register_background"
        tools:context=".Register">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="679dp"
        android:layout_centerVertical="true"
        android:orientation="vertical"
        android:layout_marginTop="56dp"
        tools:ignore="UselessParent">

        <ImageView
            android:layout_width="169dp"
            android:layout_height="169dp"
            android:layout_gravity="center_horizontal"
            android:src="@drawable/logo"
            android:layout_marginTop="20dp"
            tools:ignore="ContentDescription,ImageContrastCheck" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:fontFamily="@font/nexa_heavy"
            android:padding="18dp"
            android:text="@string/register_welcome"
            android:textColor="@color/white"
            android:textSize="22sp" />

        <EditText
            android:id="@+id/User_Name"
            android:layout_width="match_parent"
            android:layout_height="54dp"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:background="@drawable/edit_background"
            android:drawableStart="@drawable/user"
            android:drawablePadding="10dp"
            android:fontFamily="@font/nexa_heavy"
            android:hint="@string/username_hint"
            android:padding="10dp"
            android:textColorHint="@color/white2"
            tools:ignore="Autofill,TextFields,VisualLintTextFieldSize" />

        <EditText
            android:id="@+id/txt_password"
            android:layout_width="match_parent"
            android:layout_height="54dp"
            android:layout_marginStart="20dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="20dp"
            android:background="@drawable/edit_background"
            android:drawableStart="@drawable/password"
            android:drawablePadding="10dp"
            android:fontFamily="@font/nexa_heavy"
            android:hint="@string/password_hint"
            android:inputType="textPassword"
            android:padding="10dp"
            android:textColorHint="@color/white2"
            tools:ignore="Autofill,TextFields,inputType,VisualLintTextFieldSize" />

        <EditText
            android:id="@+id/reenterPassword"
            android:layout_width="match_parent"
            android:layout_height="54dp"
            android:layout_marginStart="20dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="20dp"
            android:background="@drawable/edit_background"
            android:drawableStart="@drawable/password"
            android:drawablePadding="10dp"
            android:fontFamily="@font/nexa_heavy"
            android:hint="@string/password_hint2"
            android:inputType="textPassword"
            android:padding="10dp"
            android:textColorHint="@color/white2"
            tools:ignore="Autofill,TextFields,inputType,VisualLintTextFieldSize" />


        <Button
            android:id="@+id/btn_submit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="30dp"
            android:layout_marginEnd="20dp"
            android:layout_marginBottom="30dp"
            android:background="@drawable/button_background"
            android:fontFamily="@font/nexa_heavy"
            android:padding="10dp"
            android:text="@string/register"
            android:textAllCaps="false"
            android:textSize="15sp"
            tools:ignore="VisualLintButtonSize" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:padding="12dp"
            android:text="Already have an account? :)"
            android:textColor="@color/white"
            tools:ignore="HardcodedText" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:fontFamily="@font/nexa_heavy"
            android:text="@string/login"
            android:textColor="@color/white"
            android:textSize="15sp" />


    </LinearLayout>

    </RelativeLayout>
